# canistral

./: .gitignore  .gitmodules  CMakeLists.txt  FindLibreOffice.cmake  README.md  build-deps.cmake  main.cpp  rerun.sh  run.sh
.github/workflows/: build.yml  linux.yml  macos.yml  windows.yml
cmake/: AppTargets.cmake  FindLibreOffice.cmake  FindQt6.cmake  Installation.cmake  PythonSetup.cmake  QtSetup.cmake  ThirdParty.cmake
include/: common.h  pybind.h  python.h  python_guard.h
include/core/translation/: api_translator.h  context.h  i_translator.h
py/: qt_exejs.py
scripts/: install_chocolatey.ps1  install_linux.sh  install_macos.sh  install_windows.bat  install_windows.ps1
src/: python_guard.cpp  python_init.cpp.in
src/core/translation/: api_translator.cpp
